third_party/move/move-compiler-v2/tests/unit_test/test/parametric_orphan_expected_failure.exp

Diagnostics:
error: top-level expected_failure is not allowed on a parametric multi-row test — use row-local syntax instead
  ┌─ tests/unit_test/test/parametric_orphan_expected_failure.move:7:9
  │
6 │     #[expected_failure]
  │       ---------------- Place this inside the bracket of its #[test(...)] row
7 │     fun multi_row_with_orphan(addr: signer) {
  │         ^^^^^^^^^^^^^^^^^^^^^
